# notebook_testing

./: BuyAndHold.html  Sma100Cross.html  Sma200Cross.html  Sma50Cross.html  SmaCross.html  backtest.py  backtest_example.py  chat_gpt_script.py  combine_sim_upro_with_upro_and_compare.ipynb  compare_rolling_3_year.ipynb  lean.json  main.py  pyproject.toml  recreating_upro.py  test.ipynb
backtest/: strategies.py
buy-close-sell-open/: config.json  main.py
historical_data/: SPXL.csv  SPXL_with_moving_average.csv  SPY.csv  SSO.csv  UPRO.csv  UPROSIM_WITHPRICES.csv  UPROSIM_WITH_NEW_DATES.csv  joined_pro_test.csv
output/: SPXL_100_ma.csv  SPXL_200_ma.csv  SPXL_50_ma.csv  SPY.csv  SSO_100_ma.csv  SSO_200_ma.csv  SSO_50_ma.csv  sma_50
tests/: Sma2Cross.html  test_backtest.py
