[tool.poetry]
name = "notebook-testing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "notebook_testing"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
jupyter = "^1.0.0"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
backtesting = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

